feat: report handler methods and full capabilities to Polaris contract
Signed-off-by: Haotian Zhang <928016560@qq.com>
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>